syntax = "proto3";
package outer;
option  go_package = "/outer";

import "error.proto";

message ChatReq {   // tag:player
    string Content     = 1;
    int32  ChannelType = 2;
}

message ChatRsp {
    ERROR err = 1;
}

message ChatNotify {
    string SenderId    = 1;
    string Name        = 2;
    string Content     = 3;
    int32  ChannelType = 4;
}